[project]
name = "video-learning-python-tools"
version = "0.1.0"
description = "Python tooling for the local video-learning pipeline"
requires-python = ">=3.11"
dependencies = [
  "yt-dlp>=2026.3.17",
  "playwright>=1.56.0",
  "TikTokApi>=7.1.0",
  "douyin-tiktok-scraper>=1.2.9",
  "scenedetect>=0.6.7",
  "opencv-python>=4.12.0",
  "opencv-python-headless>=4.12.0",
  "faster-whisper>=1.2.0",
  "openai>=2.0.0"
]

[tool.uv]
package = false
